fix: leaves dropping from too high

--- a/src/components/Hero/animations.css
+++ b/src/components/Hero/animations.css
@@ -14,6 +14,10 @@ svg :is(#leaf-2_4, #leaf-1_3) {
 	animation: disappearleaf 3s linear forwards;
 }
 
+svg :is(#leaf-1, #leaf-2, #leaf-3){
+	animation: leafDrop 3s linear forwards;
+}
+
 svg #countdown{
 	animation: halo 10s linear infinite alternate;
 	transform-box: fill-box;
@@ -102,7 +106,7 @@ svg :is(#cathedral-light, #SupremeCourtLeftLight, #supremeCourtRightLight) {
 
 @keyframes leaf {
 	from {
-		transform: translateY(-20vh);
+		transform: translateY(-5vh);
 	}
 	to {
 		transform: translateY(2vh);
@@ -111,11 +115,11 @@ svg :is(#cathedral-light, #SupremeCourtLeftLight, #supremeCourtRightLight) {
 
 @keyframes leafDrop {
 	0% {
-		transform: translate(0, 0);
+		transform: translate(-0.2vw, -1vh);
 	}
-
+	
 	100% {
-		transform: translate(0.5vw, 1vh);
+		transform: translate(0, 0);
 	}
 }
 
